--- a/sass/site/builder/_header.scss
+++ b/sass/site/builder/_header.scss
@@ -237,7 +237,6 @@
 	.ast-hb-account-login {
 		position: fixed;
 		left: 50%;
-		overflow: hidden;
 		top: 50%;
 		padding: 35px;
 		bottom: 0px;
@@ -312,6 +311,7 @@
 		transform: scale(0.7);
 		opacity: 0;
 		transition: all 0.3s;
+		overflow: auto;
 	}
 }
 .ast-header-account-wrap {
@@ -332,7 +332,8 @@
 }
 .ast-hb-login-body {
     height: 100%;
-    position: relative;
+	position: relative;
+	line-height: 1.5;
 }
 
 .ast-header-account-type-avatar {
